# arxiv-radar-mcp

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  radar.example.toml
.github/workflows/: tests.yml
docs/: MODEL_BENCHMARKS.md  PLAN.md  PLAN_ARCHIVE.md  PLAN_CORE_EXTRACTION.md
scripts/: audit_image.py  docker_build.sh  docker_entrypoint.sh  docker_fetch.sh  docker_init_volume.sh  docker_logs_backend.sh  docker_reindex.sh  docker_serve_backend.sh  docker_serve_mcp.sh  docker_setup_source.sh  docker_stop_backend.sh
src/arxiv_radar_mcp/: __init__.py  __main__.py  build_cache.py  chunker.py  config.py  corpus.py  embeddings.py  fulltext.py  fulltext_cli.py  fulltext_index.py  jobs.py  proxy.py  refresh.py  reindex_cli.py  reranker.py  search.py  server.py
src/corpus_core/: README.md  __init__.py  embeddings.py  search.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_corpus.py  test_embeddings.py  test_fulltext.py  test_fulltext_echo_skeleton.py  test_fulltext_index.py  test_fulltext_pdf_tier.py  test_jobs.py  test_new_fixes.py  test_proxy.py  test_refresh.py  test_reranker.py  test_search_text.py  test_server.py  test_server_http.py
