[project]
name = "arxiv-radar-mcp"
version = "0.0.1"
description = "MCP server for semantic + text search across the daily-arxiv-* fork family."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Igor Morozov", email = "igor@exopoiesis.space" }
]
keywords = ["mcp", "arxiv", "search", "semantic-search", "ai4science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "mcp>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "platformdirs>=4.0",
    "httpx>=0.27",
    "selectolax>=0.3",
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
arxiv-radar-mcp = "arxiv_radar_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/exopoiesis/arxiv-radar-mcp"
Issues = "https://github.com/exopoiesis/arxiv-radar-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_radar_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
